src/scss/dp/overrides/components/_timeseries-explorer.scss
.timeseries__list-container {
  position: absolute;
  width: 500px;
  background: #e5e6e7;
  top: 245px;
  right: 0;
  z-index: 1000;
  padding: 8px 0 24px;
  color: #e5e6e7;
  background: #414042;
}

.timeseries__list-container:after {
  content: "";
  width: 0;
  height: 0;
  border-left: 16px solid transparent;
  border-right: 16px solid transparent;
  border-bottom: 16px solid #414042;
  position: absolute;
  top: -16px;
  right: 40px;
}

.timeseries__list--exit {
  cursor: pointer;
  position: absolute;
  right: 16px;
  top: 8px;
}

.timeseries__empty {
  text-align: center;
}

.d-flex { 
  display: flex;
}

.ml-auto {
  margin-left: auto;
}

.timeseries__list {
  max-height: 464px;
  overflow-x: hidden;
  margin-left: 16px;
}

.list--neutral {
  list-style: none;
  padding: 0;
}

.timeseries__remember {
  display: none;
  margin-bottom: 16px;
  padding: 6px 16px 2px;
}

.timeseries__download {
  border-top: 1px solid #d0d2d3;
  margin: -1px 16px 0;
  display: none;
}

.border-bottom {
  border-bottom: 1px solid #d0d2d3;
}

